--- a/source.css
+++ b/source.css
@@ -1,5 +1,5 @@
 :root {
-  --app-bg: url(https://i.imgur.com/a/8UY9gTJ.jpg);
+  --app-bg: url(https://i.imgur.com/a/rXAGplv.jpg);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 8px;
